tests/baselines/reference/assignmentCompatability41.errors.txt
tests/cases/compiler/assignmentCompatability41.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type 'classWithTwoPrivate<number, string>'.
  Property 'one' is private in type 'classWithTwoPrivate<number, string>' but not in type 'interfaceWithPublicAndOptional<number, string>'.


==== tests/cases/compiler/assignmentCompatability41.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export        class classWithTwoPrivate<T,U> { constructor(private one: T, private two: U) {} }  var x6 = new classWithTwoPrivate(1, "a");;
        export var __val__x6 = x6;
    }
    __test2__.__val__x6 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|interfaceWithPublicAndOptional|0|}<number, string>' is not assignable to type '{|classWithTwoPrivate|1|}<number, string>'.
!!! error TS2322:   Property 'one' is private in type 'classWithTwoPrivate<number, string>' but not in type 'interfaceWithPublicAndOptional<number, string>'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability41.ts:2:22
!!! annotated symbol 1 tests/cases/compiler/assignmentCompatability41.ts:6:25